--- a/client/index.html
+++ b/client/index.html
@@ -60,9 +60,7 @@
     <x-instructions desktop="Click to send files or right click to send a message" mobile="Tap to send files or long tap to send a message"></x-instructions>
     <!-- Footer -->
     <footer class="column">
-        <svg class="icon logo">
-            <use xlink:href="#wifi-tethering" />
-        </svg>
+        <img src="images/256.png" height="80" />
         <div id="displayName" placeholder="The easiest way to transfer data across devices"></div>
         <div class="font-body2">You can be discovered by everyone with this link</div>
     </footer>
@@ -126,9 +124,7 @@
                     </svg>
                 </a>
             </header>
-            <svg class="icon logo">
-                <use xlink:href="#wifi-tethering" />
-            </svg>
+            <img src="images/256.png" height="128"/>
             <h1>StoreIMG Drop</h1>
             <div class="font-subheading">The easiest way to transfer files across devices</div>
             <div class="row">
