Added room join to homepage

--- a/client/index.html
+++ b/client/index.html
@@ -55,8 +55,13 @@
     <!-- Peers -->
     <x-peers class="center"></x-peers>
     <x-no-peers>
-        <h2>Scan the QR code or share this url to send files</h2>
+        <h2>Scan the QR code or share the room code '<x-code></x-code>' to send files</h2>
     </x-no-peers>
+    <p>--or--</p>
+    <form onsubmit="return test();">
+        <input type="text" id="id" name="id" placeholder="Enter room code"> 
+        <input type="submit" value="Join Room"> 
+    </form>
     <x-instructions desktop="Click to send files or right click to send a message" mobile="Tap to send files or long tap to send a message"></x-instructions>
     <!-- Footer -->
     <footer class="column">
@@ -193,6 +198,7 @@
         </symbol>
     </svg>
     <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/hashids@1.1.4/dist/hashids.js"></script>
     <script src="scripts/network.js"></script>
     <script src="scripts/ui.js"></script>
     <script src="scripts/theme.js" async></script>
